objects/Contact.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__Form_W7_Treaty_Country__c</fullName>
        <description>This field is optional and manually updated. The country under whose treaty the account holder receives benefits.</description>
        <inlineHelpText>The country under whose treaty the account holder receives benefits.</inlineHelpText>
        <label>Form W7 Treaty Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Type_Other__c</fullName>
        <description>This field is optional and manually updated. A description of the other reason the application for US Individual Taxpayer Identification Number is being submitted.</description>
        <inlineHelpText>A description of the other reason the application for US Individual Taxpayer Identification Number is being submitted.</inlineHelpText>
        <label>Form W7 Type Other</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_Type__c</fullName>
        <description>This field is optional and manually updated. Specifies the reason the account holder is submitting an application for an IRS Individual Taxpayer Identification Number.</description>
        <inlineHelpText>Specifies the reason the account holder is submitting an application for an IRS Individual Taxpayer Identification Number.</inlineHelpText>
        <label>Form W7 Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Nonresident Alien Tax Treaty</fullName>
                </value>
                <value>
                    <fullName>Nonresident Alien Filing Tax Return</fullName>
                </value>
                <value>
                    <fullName>Resident Alien Filing Tax Return</fullName>
                </value>
                <value>
                    <fullName>Citizen Dependent</fullName>
                </value>
                <value>
                    <fullName>Citizen Spouse</fullName>
                </value>
                <value>
                    <fullName>Nonresident Alien Student, Professor, or Researcher</fullName>
                </value>
                <value>
                    <fullName>Dependent or Spouse of Nonresident Alien</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_USCIS_Verifies__c</fullName>
        <description>This field is optional and manually updated. United States Citizenship and Immigration Services (USCIS) Photo Identification verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>United States Citizenship and Immigration Services (USCIS) Photo Identification verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>Form W7 USCIS Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Form_W7_US_Entry_Date__c</fullName>
        <description>This field is optional and manually updated. The date the account holder entered the United State.</description>
        <inlineHelpText>The date the account holder entered the United State.</inlineHelpText>
        <label>Form W7 US Entry Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Former_Employer_EIN__c</fullName>
        <description>This field is optional and manually updated. The previous employer identification number of the account holder.</description>
        <inlineHelpText>The previous employer identification number of the account holder.</inlineHelpText>
        <label>Former Employer EIN</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Former_Employer_Name__c</fullName>
        <description>This field is optional and manually updated. The name under which the previous employer identification number for the account holder was issued.</description>
        <inlineHelpText>The name under which the previous employer identification number for the account holder was issued.</inlineHelpText>
        <label>Former Employer Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Gender__c</fullName>
        <description>This field is optional and manually updated. Specifies the gender type of the account holder.</description>
        <inlineHelpText>Specifies the gender type of the account holder.</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Not Disclosed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_Address_County__c</fullName>
        <description>Users populate this optional text field with the county name for the home address.</description>
        <label>Home Address County</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_Address__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the Street address of the Contact&apos;s home address</description>
        <label>Home Street</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_City__c</fullName>
        <description>The user populates this optional field to specify the city of the contact’s home address. By default, this field is blank.</description>
        <label>Home City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_Location__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the Geolocation of the home address ( Latitude and Longitude)</description>
        <label>Location</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_State__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the State of the Contact&apos;s home address</description>
        <label>Home State</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Country__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>DC</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Home_Zipcode__c</fullName>
        <description>The user populates this optional field to specify the ZIP code of the contact’s home address. By default, this field is blank.</description>
        <label>Home ZIP Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Housing_Expense__c</fullName>
        <description>The user populates this picklist field to determine the type of housing expense highlighted in the field set.</description>
        <inlineHelpText>Select the desired type of housing expense.</inlineHelpText>
        <label>Housing Expense</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Own</fullName>
                </value>
                <value>
                    <fullName>Rent</fullName>
                </value>
                <value>
                    <fullName>None</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__ID_Scan_Verification_Date__c</fullName>
        <description>The system automatically populates this date/time field to store the recent date/time the contact initiated in the ID scan workflow.</description>
        <inlineHelpText>The date/time of verification for ID Scan automatically populates in this field.</inlineHelpText>
        <label>ID Scan Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Id_Scan_Status__c</fullName>
        <description>The system automatically populates this picklist to track the progress through the ID Scan workflow by using the current ID Scan status.</description>
        <label>ID Scan Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ID Scan Success</fullName>
                </value>
                <value>
                    <fullName>ID Scan Failure</fullName>
                </value>
                <value>
                    <fullName>Bad Image</fullName>
                </value>
                <value>
                    <fullName>Communication Error</fullName>
                </value>
                <value>
                    <fullName>Vendor Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Identity_Verification_Date__c</fullName>
        <description>This field automatically populates. It indicates the most recent date and time the contact initiated identity verification.</description>
        <label>Identity Verification Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Identity_Verification_Status__c</fullName>
        <description>This picklist field automatically populates. It indicates the identity verification status of the contact.</description>
        <label>Identity Verification Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Communication Error</fullName>
                </value>
                <value>
                    <fullName>ID Verification Failure</fullName>
                </value>
                <value>
                    <fullName>Not Eligible for Questions</fullName>
                </value>
                <value>
                    <fullName>Pass</fullName>
                </value>
                <value>
                    <fullName>Retry Limited Exceeded</fullName>
                </value>
                <value>
                    <fullName>Unable to Generate Questions</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Income_Source__c</fullName>
        <description>The system or user populates this optional field with the source of a contact’s income.</description>
        <inlineHelpText>The system or user populates this field to display the source of a contact’s income.</inlineHelpText>
        <label>Income Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Spread in nCino</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Non_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users populate this optional boolean field on the contact when the entity is not a customer. By default, this field is false.</description>
        <inlineHelpText>Select this checkbox when the added entity is not a customer.</inlineHelpText>
        <label>Is Non-Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Is_Third_Party__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Users populate this optional boolean field on the contact when the added entity is a third party. By default, this field is false.</description>
        <inlineHelpText>Select this checkbox when the added entity is a third-party entity.</inlineHelpText>
        <label>Is Third Party</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Languages__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the Language(s) of the contact&apos;s preference</description>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Level__c</fullName>
        <description>This field is not required and is manually populated. This field defines the priority level of a contact to its associated relationship.</description>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Mailing_Address_County__c</fullName>
        <description>Users populate this optional text field with the county name for the mailing address.</description>
        <label>Mailing Address County</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Marital_Status__c</fullName>
        <description>This field is optional. This field is manually populated. This field is used to set a contact&apos;s marital status.</description>
        <inlineHelpText>This field is used to set a contact&apos;s marital status.</inlineHelpText>
        <label>Marital Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Married</fullName>
                </value>
                <value>
                    <fullName>Unmarried</fullName>
                </value>
                <value>
                    <fullName>Legally Separated</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Monthly_Income__c</fullName>
        <description>Users populate this optional currency field with the applicant&apos;s monthly income. By default, it is blank.</description>
        <inlineHelpText>Enter the applicant&apos;s monthly income.</inlineHelpText>
        <label>Monthly Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__NetConnect_Pull_Date__c</fullName>
        <description>This field is currently not being used</description>
        <label>NetConnect Pull Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Number_of_Dependents__c</fullName>
        <description>The user populates this number field to indicate the number of dependents in the borrower’s household. By default, this field is blank.</description>
        <inlineHelpText>Enter the number of dependents in your household.</inlineHelpText>
        <label>Number of Dependents</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__OFAC_Check_Completion_Date__c</fullName>
        <description>The date in which the latest OFAC check was run for a given individual. This field is optional and can be edited via the customer creation workflow.</description>
        <label>OFAC Check Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Patriot_Act_Alert_Explanation__c</fullName>
        <description>The system automatically populates this text field to display the offense(s) registered to a user.</description>
        <inlineHelpText>The text field automatically populates information about the offense(s) registered to a user.</inlineHelpText>
        <label>Patriot Act Alert Explanation</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Patriot_Act_Alert__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The system automatically populates this checkbox to indicate that a users information flagged a Patriot Act Alert from IDology to Data Services.</description>
        <inlineHelpText>The system automatically selects this checkbox.</inlineHelpText>
        <label>Patriot Act Alert</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Permanent_Resident_Entry_Date__c</fullName>
        <description>This field is optional. The user manually populates this field. It is the date of entry to the United States for a permanent resident.</description>
        <label>Permanent Residency Date of Entry</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Permanent_Resident_Issue_Date__c</fullName>
        <description>This field is optional. The user manually populates this field. It is the issue date of permanent residency.</description>
        <label>Permanent Residency Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Permanent_Resident_Number__c</fullName>
        <description>This field is optional and manually updated. If the contact is a permanent resident this holds the resident number. A 13 digit alpha numeric text.</description>
        <label>Permanent Resident Number</label>
        <length>13</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>LLC_BI__Permanent_Resident__c</fullName>
        <description>This field is optional and manually updated. This is used to describe if the contact is a US Citizen</description>
        <label>Are you a permanent US Resident?</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Phone_Number_Type__c</fullName>
        <description>This field is optional. The user manually populates this field. It describes the type of phone number.</description>
        <label>Phone Number Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Home</fullName>
                </value>
                <value>
                    <fullName>Mobile</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Preferred_Contact_Method__c</fullName>
        <description>This field is optional. The user manually populates this field. It represents the customer&apos;s preferred contact method.</description>
        <label>Preferred Contact Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Phone</fullName>
                </value>
                <value>
                    <fullName>Email</fullName>
                </value>
                <value>
                    <fullName>Mail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is optional and manually updated. This field is used as an indicator that the contact record is the primary contact for the relationship it is associated to.</description>
        <label>Primary Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_ID_Expiration_Date__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the date the Primary ID ( ie Driver&apos;s License) will expire</description>
        <label>Primary ID Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_ID_Issue_Date__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the date the Primary ID (ie Driver&apos;s License) was issued</description>
        <label>Primary ID Issue Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Primary_ID_Issuing_State__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the State in which the Primary ID (ie Driver&apos;s License) was issued in.</description>
        <label>Primary ID Issuing State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Reg_O__c</fullName>
        <description>This field is optional. The user manually populates this field. When enabled, it indicates that an individual is an executive officer, director, or principal shareholder of that financial institution. When disabled, the invidual is not one of these. This field can be used in sharing settings for the org.</description>
        <label>Reg O</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Employee</fullName>
                </value>
                <value>
                    <fullName>Officer</fullName>
                </value>
                <value>
                    <fullName>Director</fullName>
                </value>
                <value>
                    <fullName>Family Member</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__SS_PE__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the social security number of the contact associated to the relationship/account. The field is only used when Platform Encryption is enabled.</description>
        <label>SS#</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__SS__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the social security number of the contact associated to the relationship/account. The field should not be used if Platform Encryption is enabled.</description>
        <label>SS#</label>
        <length>80</length>
        <maskChar>X</maskChar>
        <maskType>ssn</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Social_Insurance_Number__c</fullName>
        <description>The user populates this required text field to capture the borrower’s Social Insurance Number.</description>
        <inlineHelpText>Enter the borrower’s Social Insurance Number here.</inlineHelpText>
        <label>Social Insurance Number</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Survey_Status__c</fullName>
        <description>This field is optional and manually updated. This field is currently not being used.</description>
        <inlineHelpText>110: Closing Survey Queued
801: Closing Survey Sent</inlineHelpText>
        <label>Survey Status</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Type__c</fullName>
        <description>This field is optional and manually updated. This field is used to specify the type of contact for this record. Typical pick list entries might include borrower, professional, referral source, or prospect. The value provided must match one of the values in the type pick list established for this organization.</description>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Borrower</fullName>
                </value>
                <value>
                    <fullName>Professional Contact</fullName>
                </value>
                <value>
                    <fullName>Referral Source</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__US_Citizen__c</fullName>
        <description>This field is optional and manually updated. This is used to describe if the contact is a US Citizen</description>
        <label>US Citizen</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__W7_Exception_1a_Partner_EIN_Ind__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This defaults to false. The W-7 applicant&apos;s reason for applying for an ITIN is &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h.&apos;</description>
        <inlineHelpText>The W-7 applicant&apos;s reason for applying for an ITIN is &apos;Exception 1a-Partnership Interest&apos; as described in the IRS instructions to form W-7 for Reason &apos;h.&apos;</inlineHelpText>
        <label>W7 Exception 1a Partnership EIN Ind</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__W7_Foreign_Military_ID_Card_Verifies__c</fullName>
        <description>This field is optional and manually updated. Foreign Military Identification Card verifies either identity or foreign status (on IRS form W-7(COA)).</description>
        <inlineHelpText>Foreign Military Identification Card verifies either identity or foreign status (on IRS form W-7(COA)).</inlineHelpText>
        <label>W7 Foreign Military ID Card Verifies</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Identity</fullName>
                </value>
                <value>
                    <fullName>Foreign Status</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__lookupKey__c</fullName>
        <description>This field is optional. This field is used to specify the external ID / LookupKey for the contact record. ( A unique identifier )</description>
        <externalId>true</externalId>
        <label>lookupKey</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Life_Event_Employment_Change__c</fullName>
        <description>Field that will update the date whenever the employer field changes.  NATALIE CONTACT CHANGE.</description>
        <label>Life Event-Employment Change</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Ownership__c</fullName>
        <label>Ownership</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Individual</fullName>
                </value>
                <value>
                    <fullName>Joint</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Residency_Detail__c</fullName>
        <description>NATALIE CONTACT CHANGE</description>
        <label>Residency Detail</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Homeowner</fullName>
                </value>
                <value>
                    <fullName>Renter</fullName>
                </value>
                <value>
                    <fullName>Neither</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>